todo-app-project/base/todo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-project-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-project-svc
                port:
                  number: 80
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-app-backend-svc
                port:
                  number: 80
